<resources>

    <!-- ToDo: Clean up string resources -->

    <!-- Notifications -->
    <string name="notification_selection">Notifications</string>
    <string name="share">Share</string>
    <string name="notify_start">Notify Start</string>
    <string name="notify_end">Notify End</string>

    <!-- Course Status Spinner -->
    <string name="course_status_selection">Course Status</string>
    <string-array name="status">
        <item>Select Status</item>
        <item>In progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to take</item>
    </string-array>

    <!-- Assessment Type Spinner -->
    <string name="assessment_type_selection">Assessment Type</string>
    <string-array name="type">
        <item>Select Type</item>
        <item>Performance Assessment</item>
        <item>Objective Assessment</item>
    </string-array>

    <!-- MainActivity UI -->
    <string name="first_intro">Stay organized and on top of your studies with ease.</string>
    <string name="second_intro">Input your class schedule, add deadlines and course notes, and set alerts to stay on track.</string>
    <string name="get_started">Get Started</string>
    <!-- Schedule UI -->
    <string name="schedule">Schedule</string>
    <string name="view_terms">View Terms</string>
    <string name="view_courses">View Courses</string>
    <string name="view_assessments">View Assessments</string>
    <!-- Terms UI -->
    <string name="term_title">Term Title Here</string>
    <string name="add_new_term">Add New Term</string>
    <string name="no_terms">There are no terms on your schedule. Please add a new term.</string>
    <string name="enter_term_title">Enter Term Title</string>
    <string name="view_term_details">View Term Details</string>
    <string name="courses">Courses</string>
    <string name="delete_term">Delete Term</string>
    <string name="term_title_label">Term Title</string>
    <!-- Courses UI -->
    <string name="add_new_course">Add New Course</string>
    <string name="view_course_details">View Course Details</string>

    <!-- Assessments UI -->
    <string name="add_new_assessment">Add New Assessment</string>
    <string name="view_assessment_details">View Assessment Details</string>


    <!-- Miscellaneous -->
    <string name="save">Save</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="enter_start_date">Enter Start Date</string>




    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="view_term_item">View Term Item</string>
    <string name="books_image">set of books</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="enter_title">Enter Title</string>
    <string name="term_options">Term Options</string>
    <string name="calendar_schedule">calendar schedule</string>
    <string name="clipboard">clipboard</string>
    <string name="view_assessment_item">View Assessment Item</string>
    <string name="no_assessments">No available assessments.</string>
    <string name="no_courses">There are no courses for this term. Please add a new course.</string>
    <string name="course_title">Course Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="course_status">Course Status</string>
    <string name="enter_course_status">Enter Course Status</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_number">Phone</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="actions">Actions</string>
    <string name="add_term_submenu">Sub menu to add a new term</string>
    <string name="sub_menu_view_courses">Sub menu to view courses</string>
    <string name="sub_menu_delete_term">Sub menu to delete term</string>
    <string name="course_title_item">Course Title Item</string>
    <string name="course_start_item">Course Start Item</string>
    <string name="course_end_item">Course End Item</string>
    <string name="start">Start</string>
    <string name="select_course">Select Course</string>
    <string name="enter_course_title">Enter Course Title</string>
    <string name="select_assessment">Select Assessment</string>
    <string name="course_instructor_information">Course Instructor Information</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="enter_type">Enter Type</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="delete_course">Delete Course</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="select_status">Select Status</string>
    <string name="selection_for_course_status">Selection for course status</string>
    <string name="view_assessment_type">View Assessment Type</string>
    <string name="end">End</string>
    <string name="course_notes">Course Notes</string>
    <string name="no_date">No date.</string>
    <string name="term_placeholder">No available terms. Please add a term.</string>
    <string name="select_for_assessment_type">Select for assessment type</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="select_date">Select Date</string>
    <string name="user_selects_end_date_from_date_picker">User selects end date from date picker.</string>
    <string name="user_selects_start_date_on_date_picker">User selects start date on date picker.</string>

</resources>