<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.CourseDetails">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_assessment_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:backgroundTint="#D13DDC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        android:contentDescription="@string/view_assessment_details" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="401dp"
        android:layout_height="215dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/course_title_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:hint="@string/enter_title"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/course_start_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:hint="@string/enter_start_date"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/course_end_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:hint="@string/enter_end_date"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_text"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>