<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".UI.AddAssessment">

    <ScrollView
        android:id="@+id/scrollViewAssessment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/assessment_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/assessment_title_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints=""
                    android:hint="@string/enter_title"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/assessment_type"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/assessment_type_spinnner"
                    style="@style/SpinnerStyle"
                    android:layout_gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/end_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/end_date_picker"
                    style="@style/DatePickerStyle"
                    android:layout_gravity="center"
                    android:contentDescription="@string/user_selects_end_date_from_date_picker"
                    android:textStyle="normal"
                    app:cornerRadius="0dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_assessment"
        android:layout_width="303dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/purple_700"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/save_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.470" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="303dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/secondary_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/cancel_button"
        android:textColor="@color/primary_button"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />
</androidx.constraintlayout.widget.ConstraintLayout>