<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.TermDetails">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/term_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/term_title"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/enter_term_title"
                    android:textColorHint="@color/hint_text"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:autofillHints=""
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/term_start_date"
                    android:textColor="@color/black"
                    android:textSize="16sp"  />

                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/enter_start_date"
                    android:textColorHint="@color/hint_text"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:autofillHints=""
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_end_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:hint="@string/enter_end_date"
                    android:textColorHint="@color/hint_text"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:autofillHints=""
                    android:inputType="date" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/to_course_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:backgroundTint="#D13DDC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        android:contentDescription="@string/view_course_details" />

    <Button
        android:id="@+id/save_new_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

</androidx.constraintlayout.widget.ConstraintLayout>